--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "HTML5, Coffeescript, HAML, Backbone based weather app that utilizes geolocation to provide current weather conditions and forecasts.",
   "main": "app/assets/js/init.coffee",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -16,11 +16,15 @@
     "url": "https://github.com/easy-weather/web/issues"
   },
   "homepage": "http://weather.keepiteasy.net",
-  "dependencies": {
+  "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-ruby-haml": "0.0.1",
-    "underscore": "^1.8.3"
+    "grunt-travis": "^0.2.3"
   }
 }
