--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-ruby-haml": "0.0.1",
-    "grunt-travis": "^0.2.3"
+    "grunt-travis": "^0.2.3",
+    "underscore": "^1.8.3"
   }
 }
